build/interpreter/scanner.cc
/* Generated by re2c 0.13.5 on Fri Feb 10 03:52:26 2012 */
#line 1 "interpreter/scanner.re"
/**
 * Clever programming language
 * Copyright (c) 2011-2012 Clever Team
 *
 * Permission is hereby granted, free of charge, to any person
 * obtaining a copy of this software and associated documentation
 * files (the "Software"), to deal in the Software without
 * restriction, including without limitation the rights to use,
 * copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following
 * conditions:
 * The above copyright notice and this permission notice shall be
 * included in all copies or substantial portions of the Software.
 *
 *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 */

#include <cstdio>
#include "interpreter/scanner.h"
#include "build/interpreter/parser.hh"
#include "interpreter/ast.h"
#include "compiler/cstring.h"
#include "types/nativetypes.h"

namespace clever {

typedef Parser::token token;

Parser::token_type yylex(Parser::semantic_type* yylval,
	Parser::location_type* yylloc, Driver& driver, ScannerState& s) {
	const unsigned char* cursor = s.cur;
	int yylen;

next_token:
	s.yylex = cursor;


#line 49 "build/interpreter/scanner.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if (YYGETCONDITION() < 1) {
		goto yyc_INITIAL;
	} else {
		if (YYGETCONDITION() < 2) {
			goto yyc_ST_COMMENT;
		} else {
			goto yyc_ST_MULTILINE_COMMENT;
		}
	}
/* *********************************** */
yyc_INITIAL:
	{
		static const unsigned char yybm[] = {
			/* table 1 .. 8: 0 */
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40, 172, 104, 172,  40, 172,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			172,  40,   8,  40,  44,  40,  40,  32, 
			 44,  44,  44,  44,  40,  44,  40,  40, 
			 47,  47,  47,  47,  47,  47,  47,  47, 
			 46,  46,  40,  40,  40,  40,  40,  44, 
			 40,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  40,  16,  40,  44,  40, 
			 40,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  46,  46,  46,  46,  46, 
			 46,  46,  46,  44,  44,  44,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			/* table 9 .. 11: 256 */
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			224, 224, 224, 224, 224, 224, 224, 224, 
			224, 224,   0,   0,   0,   0,   0,   0, 
			  0,  96,  96,  96,  96,  96,  96,  96, 
			 96,  96,  96,  96,  96,  96,  96,  96, 
			 96,  96,  96,  96,  96,  96,  96,  96, 
			 96,  96,  96,   0,   0,   0,   0,  96, 
			  0,  32,  32,  32,  32,  32,  32,  32, 
			 32,  32,  32,  32,  32,  32,  32,  32, 
			 32,  32,  32,  32,  32,  32,  32,  32, 
			 32,  32,  32,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};

		yych = *YYCURSOR;
		switch (yych) {
		case 0x00:	goto yy2;
		case '\t':
		case '\v':
		case '\r':
		case ' ':	goto yy5;
		case '\n':	goto yy7;
		case '!':	goto yy9;
		case '"':	goto yy10;
		case '%':	goto yy11;
		case '&':	goto yy12;
		case '\'':	goto yy14;
		case '(':
		case ')':
		case ',':
		case ';':
		case '{':
		case '}':
		case '~':	goto yy15;
		case '*':	goto yy16;
		case '+':	goto yy17;
		case '-':	goto yy18;
		case '.':	goto yy19;
		case '/':	goto yy20;
		case '0':	goto yy21;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy23;
		case ':':	goto yy24;
		case '<':	goto yy25;
		case '=':	goto yy27;
		case '>':	goto yy28;
		case 'A':	goto yy30;
		case 'B':	goto yy32;
		case 'C':	goto yy33;
		case 'D':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'Q':
		case 'S':
		case 'X':
		case 'Y':
		case 'Z':	goto yy34;
		case 'E':	goto yy35;
		case 'F':	goto yy36;
		case 'I':	goto yy37;
		case 'O':	goto yy38;
		case 'P':	goto yy39;
		case 'R':	goto yy40;
		case 'T':	goto yy41;
		case 'U':	goto yy42;
		case 'V':	goto yy43;
		case 'W':	goto yy44;
		case '^':	goto yy45;
		case 'a':	goto yy46;
		case 'b':	goto yy48;
		case 'c':	goto yy49;
		case 'd':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'q':
		case 's':
		case 'x':
		case 'y':
		case 'z':	goto yy50;
		case 'e':	goto yy51;
		case 'f':	goto yy52;
		case 'i':	goto yy53;
		case 'o':	goto yy54;
		case 'p':	goto yy55;
		case 'r':	goto yy56;
		case 't':	goto yy57;
		case 'u':	goto yy58;
		case 'v':	goto yy59;
		case 'w':	goto yy60;
		case '|':	goto yy61;
		default:	goto yy4;
		}
yy2:
		++YYCURSOR;
yy3:
		{ yylen = cursor - s.yylex; }
#line 341 "interpreter/scanner.re"
		{ RET(Parser::token_type(s.yylex[0])); }
#line 235 "build/interpreter/scanner.cc"
yy4:
		yych = *++YYCURSOR;
		goto yy3;
yy5:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy410;
yy6:
		{ yylen = cursor - s.yylex; }
#line 63 "interpreter/scanner.re"
		{ yylloc->step(); SKIP(); }
#line 247 "build/interpreter/scanner.cc"
yy7:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy408;
yy8:
		{ yylen = cursor - s.yylex; }
#line 64 "interpreter/scanner.re"
		{ yylloc->lines(yylen); yylloc->step(); SKIP(); }
#line 256 "build/interpreter/scanner.cc"
yy9:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy405;
		goto yy3;
yy10:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy401;
yy11:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy398;
		goto yy3;
yy12:
		++YYCURSOR;
		if ((yych = *YYCURSOR) == '&') goto yy396;
		if (yych == '=') goto yy394;
yy13:
		{ yylen = cursor - s.yylex; }
#line 257 "interpreter/scanner.re"
		{ RET(Parser::token_type(s.yylex[0])); }
#line 277 "build/interpreter/scanner.cc"
yy14:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy388;
yy15:
		yych = *++YYCURSOR;
		goto yy13;
yy16:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy385;
		goto yy13;
yy17:
		yych = *++YYCURSOR;
		if (yych == '+') goto yy383;
		if (yych == '=') goto yy381;
		goto yy13;
yy18:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= '/') {
			if (yych <= ',') goto yy13;
			if (yych <= '-') goto yy379;
			if (yych <= '.') goto yy376;
			goto yy13;
		} else {
			if (yych <= '9') goto yy374;
			if (yych == '=') goto yy377;
			goto yy13;
		}
yy19:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy3;
		if (yych <= '9') goto yy372;
		goto yy3;
yy20:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= '-') {
			if (yych <= ' ') {
				if (yych <= '\v') {
					if (yych == '\t') goto yy361;
					if (yych <= '\n') goto yy13;
					goto yy361;
				} else {
					if (yych == '\r') goto yy361;
					if (yych <= 0x1F) goto yy13;
					goto yy361;
				}
			} else {
				if (yych <= ')') {
					if (yych == '$') goto yy361;
					if (yych <= '\'') goto yy13;
					goto yy361;
				} else {
					if (yych <= '*') goto yy363;
					if (yych == ',') goto yy13;
					goto yy361;
				}
			}
		} else {
			if (yych <= '@') {
				if (yych <= '<') {
					if (yych <= '.') goto yy13;
					if (yych <= '/') goto yy366;
					if (yych <= '9') goto yy361;
					goto yy13;
				} else {
					if (yych <= '=') goto yy368;
					if (yych == '?') goto yy361;
					goto yy13;
				}
			} else {
				if (yych <= ']') {
					if (yych <= 'Z') goto yy361;
					if (yych == '\\') goto yy365;
					goto yy13;
				} else {
					if (yych <= '^') goto yy361;
					if (yych <= '`') goto yy13;
					if (yych <= '}') goto yy361;
					goto yy13;
				}
			}
		}
yy21:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych == 'x') goto yy357;
		goto yy356;
yy22:
		{ yylen = cursor - s.yylex; }
#line 291 "interpreter/scanner.re"
		{
		Value* newval = new Value(CLEVER_INT);
		int64_t n = strtol(std::string(reinterpret_cast<const char*>(s.yylex), yylen).c_str(), NULL, 10);

		newval->setInteger(n);

		yylval->num_literal = new ast::NumberLiteral(newval);

		RET(token::NUM_INTEGER);
	}
#line 380 "build/interpreter/scanner.cc"
yy23:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy347;
yy24:
		yych = *++YYCURSOR;
		if (yych == ':') goto yy341;
		if (yych == '=') goto yy343;
		goto yy3;
yy25:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= ';') goto yy26;
		if (yych <= '<') goto yy335;
		if (yych <= '=') goto yy337;
yy26:
		{ yylen = cursor - s.yylex; }
#line 86 "interpreter/scanner.re"
		{ RET(token::LESS); }
#line 399 "build/interpreter/scanner.cc"
yy27:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy333;
		goto yy13;
yy28:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= '<') goto yy29;
		if (yych <= '=') goto yy329;
		if (yych <= '>') goto yy327;
yy29:
		{ yylen = cursor - s.yylex; }
#line 76 "interpreter/scanner.re"
		{ RET(token::GREATER); }
#line 413 "build/interpreter/scanner.cc"
yy30:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= 'Z') {
			if (yych <= 'N') {
				if (yych <= '9') {
					if (yych >= '0') goto yy171;
				} else {
					if (yych <= '@') goto yy31;
					if (yych <= 'M') goto yy171;
					goto yy315;
				}
			} else {
				if (yych <= 'S') {
					if (yych <= 'R') goto yy171;
					goto yy316;
				} else {
					if (yych == 'U') goto yy317;
					goto yy171;
				}
			}
		} else {
			if (yych <= 'n') {
				if (yych <= '_') {
					if (yych >= '_') goto yy171;
				} else {
					if (yych <= '`') goto yy31;
					if (yych <= 'm') goto yy175;
					goto yy318;
				}
			} else {
				if (yych <= 't') {
					if (yych == 's') goto yy319;
					goto yy175;
				} else {
					if (yych <= 'u') goto yy320;
					if (yych <= 'z') goto yy175;
				}
			}
		}
yy31:
		{ yylen = cursor - s.yylex; }
#line 245 "interpreter/scanner.re"
		{
		yylval->ast_node = new ast::Identifier(CSTRING(std::string(reinterpret_cast<const char*>(s.yylex), yylen)));
		RET(token::TYPE);
	}
#line 460 "build/interpreter/scanner.cc"
yy32:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'R') goto yy307;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'r') goto yy308;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy33:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= 'K') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				if (yych <= '@') goto yy31;
				goto yy171;
			} else {
				if (yych <= 'L') goto yy291;
				if (yych == 'O') goto yy292;
				goto yy171;
			}
		} else {
			if (yych <= 'k') {
				if (yych == '_') goto yy171;
				if (yych <= '`') goto yy31;
				goto yy175;
			} else {
				if (yych <= 'n') {
					if (yych <= 'l') goto yy293;
					goto yy175;
				} else {
					if (yych <= 'o') goto yy294;
					if (yych <= 'z') goto yy175;
					goto yy31;
				}
			}
		}
yy34:
		yych = *++YYCURSOR;
		if (yybm[256+yych] & 64) {
			goto yy171;
		}
		if (yych <= '`') goto yy31;
		if (yych <= 'z') goto yy175;
		goto yy31;
yy35:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= 'B') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				if (yych <= '@') goto yy31;
				goto yy171;
			} else {
				if (yych <= 'C') goto yy275;
				if (yych == 'L') goto yy276;
				goto yy171;
			}
		} else {
			if (yych <= 'b') {
				if (yych == '_') goto yy171;
				if (yych <= '`') goto yy31;
				goto yy175;
			} else {
				if (yych <= 'k') {
					if (yych <= 'c') goto yy277;
					goto yy175;
				} else {
					if (yych <= 'l') goto yy278;
					if (yych <= 'z') goto yy175;
					goto yy31;
				}
			}
		}
yy36:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych <= 'A') goto yy263;
				if (yych == 'O') goto yy264;
				goto yy171;
			}
		} else {
			if (yych <= 'a') {
				if (yych == '_') goto yy171;
				if (yych <= '`') goto yy31;
				goto yy265;
			} else {
				if (yych == 'o') goto yy266;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy37:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= 'E') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				if (yych <= '@') goto yy31;
				goto yy171;
			} else {
				if (yych <= 'L') {
					if (yych <= 'F') goto yy249;
					goto yy171;
				} else {
					if (yych <= 'M') goto yy250;
					if (yych <= 'N') goto yy251;
					goto yy171;
				}
			}
		} else {
			if (yych <= 'f') {
				if (yych <= '_') {
					if (yych <= '^') goto yy31;
					goto yy171;
				} else {
					if (yych <= '`') goto yy31;
					if (yych <= 'e') goto yy175;
					goto yy252;
				}
			} else {
				if (yych <= 'm') {
					if (yych <= 'l') goto yy175;
					goto yy253;
				} else {
					if (yych <= 'n') goto yy254;
					if (yych <= 'z') goto yy175;
					goto yy31;
				}
			}
		}
yy38:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'R') goto yy247;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'r') goto yy248;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy39:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= 'Q') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				if (yych <= '@') goto yy31;
				goto yy171;
			} else {
				if (yych <= 'R') goto yy211;
				if (yych == 'U') goto yy212;
				goto yy171;
			}
		} else {
			if (yych <= 'q') {
				if (yych == '_') goto yy171;
				if (yych <= '`') goto yy31;
				goto yy175;
			} else {
				if (yych <= 't') {
					if (yych <= 'r') goto yy213;
					goto yy175;
				} else {
					if (yych <= 'u') goto yy214;
					if (yych <= 'z') goto yy175;
					goto yy31;
				}
			}
		}
yy40:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'E') goto yy201;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'e') goto yy202;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy41:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'R') goto yy195;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'r') goto yy196;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy42:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'S') goto yy191;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 's') goto yy192;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy43:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'O') goto yy184;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'o') goto yy185;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy44:
		yych = *++YYCURSOR;
		if (yych <= 'Z') {
			if (yych <= '@') {
				if (yych <= '/') goto yy31;
				if (yych <= '9') goto yy171;
				goto yy31;
			} else {
				if (yych == 'H') goto yy174;
				goto yy171;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy171;
				goto yy31;
			} else {
				if (yych == 'h') goto yy177;
				if (yych <= 'z') goto yy175;
				goto yy31;
			}
		}
yy45:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy169;
		goto yy13;
yy46:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= 'U') {
			if (yych <= 'R') {
				if (yych == 'N') goto yy160;
				goto yy67;
			} else {
				if (yych <= 'S') goto yy161;
				if (yych <= 'T') goto yy67;
				goto yy163;
			}
		} else {
			if (yych <= 'r') {
				if (yych == 'n') goto yy160;
				goto yy67;
			} else {
				if (yych <= 's') goto yy161;
				if (yych == 'u') goto yy163;
				goto yy67;
			}
		}
yy47:
		{ yylen = cursor - s.yylex; }
#line 230 "interpreter/scanner.re"
		{
		yylval->identifier = new ast::Identifier(CSTRING(std::string(reinterpret_cast<const char*>(s.yylex), yylen)));
		RET(token::IDENT);
	}
#line 797 "build/interpreter/scanner.cc"
yy48:
		yych = *++YYCURSOR;
		if (yych == 'R') goto yy155;
		if (yych == 'r') goto yy155;
		goto yy67;
yy49:
		yych = *++YYCURSOR;
		if (yych <= 'O') {
			if (yych == 'L') goto yy145;
			if (yych <= 'N') goto yy67;
			goto yy146;
		} else {
			if (yych <= 'l') {
				if (yych <= 'k') goto yy67;
				goto yy145;
			} else {
				if (yych == 'o') goto yy146;
				goto yy67;
			}
		}
yy50:
		yych = *++YYCURSOR;
		goto yy67;
yy51:
		yych = *++YYCURSOR;
		if (yych <= 'L') {
			if (yych == 'C') goto yy130;
			if (yych <= 'K') goto yy67;
			goto yy131;
		} else {
			if (yych <= 'c') {
				if (yych <= 'b') goto yy67;
				goto yy130;
			} else {
				if (yych == 'l') goto yy131;
				goto yy67;
			}
		}
yy52:
		yych = *++YYCURSOR;
		if (yych <= 'O') {
			if (yych == 'A') goto yy122;
			if (yych <= 'N') goto yy67;
			goto yy123;
		} else {
			if (yych <= 'a') {
				if (yych <= '`') goto yy67;
				goto yy122;
			} else {
				if (yych == 'o') goto yy123;
				goto yy67;
			}
		}
yy53:
